fixed trivia so long text in answers doesn't overflow

--- a/app/games/5/trivia.css
+++ b/app/games/5/trivia.css
@@ -38,5 +38,6 @@ body {
     height: 65px;
     border-top: 1px solid #6e6e6e;
     background-color: #eee;
-    line-height: 65px;
+    padding: 5px;
+    /*line-height: 65px;*/
      }
